force-app/main/default/objects/ContractProduct__c/ContractProduct__c.object-meta.xml
<CustomObject>
    <label>Contract+Product</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Contract+Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract+Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>