force-app/main/default/objects/ContractProduct__c/fields/BillNameatPrintENG__c.field-meta.xml
<CustomField>
    <fullName>BillNameatPrintENG__c</fullName>
    <label>Bill Name at Print(ENG)</label>
    <type>TextArea</type>
</CustomField>