force-app/main/default/objects/ContractProduct__c/fields/CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT__c</fullName>
    <label>CONTRACT</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract+Products</relationshipLabel>
    <relationshipName>Contract_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>