force-app/main/default/objects/ContractProduct__c/fields/PlanChargeQuantity__c.field-meta.xml
<CustomField>
    <fullName>PlanChargeQuantity__c</fullName>
    <label>Plan Charge Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>