force-app/main/default/objects/ContractProduct__c/fields/PlanGrossWeightMT__c.field-meta.xml
<CustomField>
    <fullName>PlanGrossWeightMT__c</fullName>
    <label>Plan Gross Weight(MT)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>