force-app/main/default/objects/ContractProduct__c/fields/PlanNetWeightMT__c.field-meta.xml
<CustomField>
    <fullName>PlanNetWeightMT__c</fullName>
    <label>Plan Net Weight(MT)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>