force-app/main/default/objects/ContractProduct__c/fields/PlanTotalAmountofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>PlanTotalAmountofSellingFCY__c</fullName>
    <formula>PlanChargeQuantity__c   *  UnitPriceofSellingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Total Amount of Selling(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>